crates/paws_domain/src/transformer/snapshots/paws_domain__transformer__reasoning_normalizer__tests__reasoning_normalizer_when_no_assistant_message_present.snap
---
source: crates/paws_domain/src/transformer/reasoning_normalizer.rs
expression: snapshot
---
transformation: ReasoningNormalizer_first_no_assistant_message_present
before:
  messages:
    - text:
        role: System
        content: System message
    - text:
        role: User
        content: User message
  reasoning:
    enabled: true
after:
  messages:
    - text:
        role: System
        content: System message
    - text:
        role: User
        content: User message
  reasoning:
    enabled: true
